# baka_dns

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dnsrelay.txt
cert/: cert.pem  key.pem
src/: CMakeLists.txt  build_conf.h  database.c  database.h  main.c  message.c  message.h  resolv.c  resolv.h  server.c  server.h  utils.c  utils.h
src/server/: message.c  message.h  resolv.c  resolv.h  server.c  server.h
src/socket/: client.c  client.h  resolv.c  resolv.h  server.c  server.h  socket.h
src/storage/: cache.c  cache.h  database.c  database.h  message.c  message.h  trees.c  trees.h
src/utils/: conf.c  conf.h  logging.c  logging.h  threadpool.c  threadpool.h  utils.c  utils.h
