file(GLOB_RECURSE CFILES *.c)
file(GLOB_RECURSE HFILES *.h)

add_executable(baka_dns ${CFILES} ${HFILES})
if(APPLE)
    find_library(ARGP_LIB argp)
    target_link_libraries(baka_dns PUBLIC ${ARGP_LIB})
endif(APPLE)
find_package( OpenSSL REQUIRED )
find_package( Threads )
target_link_libraries(baka_dns ${CMAKE_THREAD_LIBS_INIT} OpenSSL::SSL)
